--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+//            url "https://www.jitpack.io"
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
     }
 }
 
